solve some problems

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <header class="w-100 vh-100  overflow-auto">
+    <header class="w-100  overflow-auto">
         <nav id="nav-co" class="navbar w-100 shadow-lg">
             <div class="container-fluid position-relative">
                 <span class="position-absolute "><i id="mod" class="fa-solid fa-moon fs-1 ico-ho"></i></span>
